# Conformal-Weyl-Gravity

./: README.md  bach_receipt.py  frame_probe.py  observable_probe.py  pyproject.toml  pytest.ini  requirements.txt  rigid_mass_probe.py
conformal_probe/: __init__.py  claims.py
conformal_probe/core/: __init__.py  geometry.py
conformal_probe/probes/: __init__.py
conformal_probe/reports/: __init__.py  json.py  markdown.py
docs/: repo-review-and-refactor-plan.md
receipts/: RUN_2026-07-08_bach.md  RUN_2026-07-09_bach_v2.1.md  RUN_2026-07-10_frame.md  RUN_2026-07-10_frame_v2.2.md  RUN_2026-07-10_observable.md  RUN_2026-07-10_rigid_mass.md
tests/: test_bach_receipt.py  test_frame_probe.py  test_observable_probe.py  test_rigid_mass_probe.py  test_sampling_semantics.py
