[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conformal-probe"
version = "0.1.0"
description = "Receipt-first symbolic probes for conformal (Weyl) gravity claims"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.14.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["conformal_probe*"]

[tool.pytest.ini_options]
addopts = ["-m", "not slow", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
markers = [
    "slow: heavy symbolic computations (constraint discovery); order-sensitive under global sympy cache growth",
    "symbolic: symbolic identity and exact-expression tests",
    "receipt: receipt-generation and output-shape tests",
]
